# coconutools

./: .gitignore  Makefile  mypy.ini  pyproject.toml  readme.md
.github/workflows/: test.yml
coconutools/: __init__.py  annotations.py  dataset.py  exceptions.py  images.py  segmentations.py
coconutools/annotations/: __init__.py  base.py  image_captioning.py  keypoint_detection.py  object_detection.py
tests/: fixtures.py  test_annotations.py  test_dataset.py  test_info.py  test_segmentations.py
tests/fixtures/: corrupted_annotation.json  food_nutritions.json
