[tool.poetry]
name = "coconutools"
version = "0.0.1"
description = "Modern API for good old MS-COCO datasets"
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.22.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "22.3.0"
flake8 = "^4.0.1"
mypy = "^0.930"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pandas = "^1.3.5"
pycocotools = "^2.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
